kubernetes/docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-deployment
  namespace: docs-ns
  labels:
    app: docs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: docs
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs
          image: ghcr.io/felix-seifert/gohfert-cluster-docs:20261004-203123
          ports:
            - containerPort: 80
